<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaptureImageScreen">
    <RelativeLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/lato"
            android:layout_centerVertical="true"
            android:text="@string/capture_screen_header_text"
            android:textStyle="bold"
            android:textColor="@color/app_black"
            android:textSize="30dp" />

        <ImageView
            android:id="@+id/close_buton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:src="@drawable/close_icon"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/help_text_line_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_container"
        android:layout_marginTop="20dp"
        android:textSize="12dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:fontFamily="@font/lato"
        android:textColor="@color/app_grey"
        android:text="@string/capture_help_text_line_1"/>

    <TextView
        android:id="@+id/help_text_line_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/help_text_line_1"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="3dp"
        android:text="@string/capture_help_text_line_2"
        android:fontFamily="@font/lato"
        android:textColor="@color/app_grey"
        android:textSize="12dp" />

    <RelativeLayout
        android:id="@+id/camera_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/help_text_line_2"
        android:layout_marginTop="10dp"
        android:layout_above="@id/page_number_text"
        android:layout_centerHorizontal="true">
        <TextureView
            android:id="@+id/camera_surface"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <ImageView
            android:id="@+id/take_picture_button"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/camera_capture_button"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:layout_alignParentTop="true"/>
        <RelativeLayout
            android:id="@+id/image_preview_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <ImageView
                android:id="@+id/image_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"/>
            <Button
                android:id="@+id/retry_button"
                android:text="@string/retry_btn_text"
                android:textColor="@color/app_white"
                android:shadowDx="3.0"
                android:shadowDy="3.0"
                android:shadowColor="@color/app_dark_grey"
                android:fontFamily="@font/lato"
                android:layout_above="@id/preview_confirmation_checkbox"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/preview_button_background"/>
            <Button
                android:id="@+id/add_to_list_button"
                android:text="@string/add_to_list_btn_text"
                android:textColor="@color/app_white"
                android:shadowDx="3.0"
                android:shadowDy="3.0"
                android:shadowColor="@color/app_dark_grey"
                android:fontFamily="@font/lato"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_above="@id/preview_confirmation_checkbox"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="5dp"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:background="@drawable/preview_button_background"/>

            <CheckBox
                android:id="@+id/preview_confirmation_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:theme="@style/app_check_box"
                android:textColor="@color/app_white"
                android:fontFamily="@font/lato"
                android:textColorHighlight="@color/app_white"
                android:visibility="invisible"
                android:text="@string/preview_confirmation_text"/>
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/page_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/lato"
        android:textColor="@color/app_black"
        android:layout_marginBottom="5dp"
        android:layout_above="@id/create_ebook_button"
        android:textSize="13dp"/>

    <Button
        android:id="@+id/create_ebook_button"
        android:text="@string/create_ebook_btn_text"
        android:textColor="@color/app_black"
        android:shadowDx="3.0"
        android:shadowDy="3.0"
        android:shadowColor="@color/app_dark_grey"
        android:fontFamily="@font/lato"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"/>

    <RelativeLayout
        android:id="@+id/ebook_details_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@drawable/ebook_form_background_gradient">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">
            <TextView
                android:id="@+id/error_empty_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@color/app_red"
                android:layout_above="@id/ebook_name_field"
                android:visibility="invisible"
                android:fontFamily="@font/lato"
                android:layout_marginBottom="5dp"
                android:text="@string/enter_ebook_name_error"/>
            <EditText
                android:id="@+id/ebook_name_field"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_above="@id/ebook_name_example"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:hint="@string/enter_ebook_name_hint"
                android:textColor="@color/app_white"
                android:textColorHint="@color/app_white"
                android:fontFamily="@font/lato"
                android:background="@drawable/preview_button_background"/>
            <TextView
                android:id="@+id/ebook_name_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/app_white"
                android:fontFamily="@font/lato"
                android:layout_above="@id/ebook_name_help_text_general"
                android:text="@string/ebook_name_help_text_general"/>
            <TextView
                android:id="@+id/ebook_name_help_text_general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/app_white"
                android:fontFamily="@font/lato"
                android:layout_above="@id/create_ebook_with_name"
                android:text="@string/ebook_name_help_text"/>
            <Button
                android:id="@+id/create_ebook_with_name"
                android:text="@string/extract_text_button_text"
                android:textColor="@color/app_white"
                android:shadowDx="3.0"
                android:shadowDy="3.0"
                android:shadowColor="@color/app_dark_grey"
                android:fontFamily="@font/lato"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:layout_centerHorizontal="true"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:background="@drawable/preview_button_background"/>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
