<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EbookListScreen"
    android:background="@drawable/main_screen_background_blurred">
    <RelativeLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:text="@string/ebook_list_header_text"
            android:fontFamily="@font/lato"
            android:textStyle="bold"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/ebooks_close_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:src="@drawable/close_icon"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/no_ebooks_msg_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp">
        <TextView
            android:id="@+id/no_ebooks_msg_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_margin="20dp"
            android:textSize="16dp"
            android:fontFamily="@font/lato"
            android:text="@string/no_ebooks_message"/>
        <Button
            android:id="@+id/get_started_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/get_started_text"
            android:fontFamily="@font/lato"
            android:layout_below="@id/no_ebooks_msg_text_view"
            android:background="@drawable/dictionary_button_background"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ebooks_recycler_view"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_below="@id/header_container"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/ebook_list_banner_adView"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:id="@+id/delete_confirmation_view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:layout_centerVertical="true"
        android:elevation="1dp"
        android:clickable="true"
        android:background="@drawable/word_meaning_view_background"
        android:visibility="gone">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="Delete this e-Book?"
            android:fontFamily="@font/lato"
            android:textSize="14dp"
            android:textColor="@color/app_black"
            android:layout_centerHorizontal="true"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:fontFamily="@font/lato"
                android:textSize="14dp"
                android:layout_weight="1"
                android:text="@string/cancel_text"
                android:textColor="@color/app_black"
                android:textAllCaps="true"
                android:gravity="center"/>
            <TextView
                android:id="@+id/delete_ebook_button"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:fontFamily="@font/lato"
                android:textSize="14dp"
                android:layout_weight="1"
                android:text="@string/delete_text"
                android:textColor="@color/app_black"
                android:textAllCaps="true"
                android:gravity="center"/>
        </LinearLayout>
    </RelativeLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ebook_list_banner_adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>