<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DocumentsScreen"
    android:background="@drawable/main_screen_background_blurred">
    <RelativeLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:text="@string/docs_screen_header_text"
            android:fontFamily="@font/lato"
            android:textStyle="bold"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/documents_close_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:src="@drawable/close_icon"/>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/documents_recycler_view"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_below="@id/header_container"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/doc_screen_banner_adView"
        android:layout_height="match_parent"/>
    <TextView
        android:id="@+id/no_files_error_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/lato"
        android:textSize="15dp"
        android:text="@string/docs_screen_error_text"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/doc_screen_banner_adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_id">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>