<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/main_screen_background_blurred"
    tools:context=".DictionaryActivity">
    <RelativeLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <TextView
            android:id="@+id/header_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:text="@string/dictionary_header_text"
            android:fontFamily="@font/lato"
            android:textStyle="bold"
            android:layout_centerVertical="true"/>

        <ImageView
            android:id="@+id/dictionary_close_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:src="@drawable/close_icon"/>
    </RelativeLayout>

    <SearchView
        android:id="@+id/dictionary_search_view"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:queryHint="@string/dictionary_query_hint"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:iconifiedByDefault="false"
        android:background="@drawable/button_background"
        android:layout_below="@id/header_container" />

    <RelativeLayout
        android:id="@+id/definition_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dictionary_search_view"
        android:layout_above="@id/dictionary_banner_adView"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/dictionary_view_background"
        android:minHeight="300dp">
        <TextView
            android:id="@+id/word_header_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:fontFamily="@font/lato"
            android:textStyle="bold"
            android:maxLines="2"
            android:layout_margin="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/definition_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/word_header_view"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/error_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/dictionary_search_view"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/dictionary_view_background">

        <TextView
            android:id="@+id/error_word_header_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:maxLines="2"
            android:fontFamily="@font/lato"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/error_message_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/error_word_header_view"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:text="@string/dictionary_error_message"
            android:textSize="15dp"/>

        <Button
            android:id="@+id/dictionary_google_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:textColor="@color/black"
            android:text="@string/google_it_text"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:fontFamily="@font/lato"
            android:background="@drawable/dictionary_button_background"/>
    </RelativeLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/dictionary_banner_adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>